--- a/CapstoneProject/appsettings.json
+++ b/CapstoneProject/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "DefaultConnectionAWS": "Server=databasecanada.czjqafpaejcf.ca-central-1.rds.amazonaws.com,1960;Database=capstonedb;User Id=admin;Password=capstone123Yekt!;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
