Create AWS and Local tables
Create AWS and local tables using the "migrations" command on AWS RDS and a local Docker-based SQL Server

--- a/CapstoneProject/CapstoneProject.csproj
+++ b/CapstoneProject/CapstoneProject.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Migrations\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
   </ItemGroup>
 
@@ -25,4 +28,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
 </Project>
