--- a/CapstoneProject/appsettings.json
+++ b/CapstoneProject/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "DefaultConnectionAWS": "Server=databasecanada.czjqafpaejcf.ca-central-1.rds.amazonaws.com,1960;Database=capstonedb;User Id=admin;Password=capstone123Yekt!;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnectionAWS": "Server=capstonedb.czjqafpaejcf.ca-central-1.rds.amazonaws.com,1960;Database=capstonedb;User Id=admin;Password=capstone123Yekt!;Encrypt=True;TrustServerCertificate=True;",
+    "DefaultConnectionDocker": "Server=localhost;Database=capstonedbAWSlocal;User Id=sa;Password=22122212Mo;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
